--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2974,7 +2974,10 @@ textarea:focus {
 }
 
 .header-small-device.small-device-ptb-1 {
-  padding: 25px 0 25px;
+  padding: 50px 0 15px;
+}
+.header-small-device.small-device-ptb-2 {
+  padding: 50px 0 15px 0;
 }
 
 .header-large-device {
